# mutation_profile

./: README.md  get_mutation_profile.py  pyproject.toml  requirements.txt
examples/: Monkeypox_positions_of_interest.tsv  OPTION1.tsv  OPTION1_report.tsv  OPTION2.tsv  OPTION2_report.tsv  OPTION3.tsv  OPTION3_report.tsv  README  README.txt  alignment_Figure1B.fasta  positions_of_interest.tsv  positions_of_interest_ID_POS_REF_ALT.tsv  positions_of_interest_ID_POS_REF_ALT.txt  positions_of_interest_POS_REF_ALT.txt  positions_of_interest_with_ID_REF_ALT_info.tsv  positions_of_interest_with_REF_ALT_info.tsv
mutation_profile/: __main__.py  mutation_profile.py
tests/: test_mutation_profile.py
