[tool.poetry]
name = "mutation-profile"
version = "0.1.0"
description = "A bioinformatics solution to determine SNP flanking sequences and mutation profile"
authors = ["Veronica Mixao <vmixao@gmail.com>"]
license = "GPL-3.0-only"

readme = "README.md"

repository = "https://github.com/insapathogenomics/mutation_profile"

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.70"
pandas = "^1.4.3"
textwrap3 = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mutation-profile = "mutation_profile.__main__:main"
